[gd_scene load_steps=13 format=2]

[ext_resource path="res://src/Key.gd" type="Script" id=1]
[ext_resource path="res://src/Label3D.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/audio/keys.wav" type="AudioStream" id=3]

[sub_resource type="BoxShape" id=12]
extents = Vector3( 0.675752, 0.756974, 0.643995 )

[sub_resource type="Gradient" id=27]
offsets = PoolRealArray( 0, 0.692308 )
colors = PoolColorArray( 1, 1, 1, 0.160784, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=28]
gradient = SubResource( 27 )

[sub_resource type="Curve" id=29]
_data = [ Vector2( 0, 0.0147727 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.970455 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=23]
curve = SubResource( 29 )

[sub_resource type="ParticlesMaterial" id=24]
gravity = Vector3( 0, 0, 0 )
scale_curve = SubResource( 23 )
color_ramp = SubResource( 28 )

[sub_resource type="SpatialMaterial" id=25]
flags_transparent = true
flags_unshaded = true
vertex_color_use_as_albedo = true
params_blend_mode = 1
albedo_color = Color( 0.45098, 0.901961, 0.247059, 1 )

[sub_resource type="SphereMesh" id=26]
material = SubResource( 25 )
radius = 0.5
height = 1.0

[sub_resource type="BoxShape" id=30]
extents = Vector3( 1.3475, 0.5, 1.30032 )

[node name="Key" type="StaticBody" groups=["Interactable"]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, -5.94309 )
script = ExtResource( 1 )

[node name="Label3D" parent="." instance=ExtResource( 2 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, -4.76837e-07 )
visible = false
label_text = "Key"

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 12 )

[node name="DiscoverArea" type="Area" parent="."]
collision_layer = 4
collision_mask = 4

[node name="DiscoverParticles" type="Particles" parent="DiscoverArea"]
emitting = false
amount = 3
lifetime = 2.0
process_material = SubResource( 24 )
draw_pass_1 = SubResource( 26 )

[node name="CollisionShape" type="CollisionShape" parent="DiscoverArea"]
shape = SubResource( 30 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
bus = "Fire"

[connection signal="body_entered" from="DiscoverArea" to="." method="_on_DiscoverArea_body_entered"]
[connection signal="body_exited" from="DiscoverArea" to="." method="_on_DiscoverArea_body_exited"]
[connection signal="finished" from="AudioStreamPlayer" to="." method="_on_AudioStreamPlayer_finished"]
